@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
-  <component name="Encoding" addBOMForNewFiles="with NO BOM" />
+  <component name="Encoding" addBOMForNewFiles="with NO BOM">
+    <file url="file://$PROJECT_DIR$/src/haven/res/lib/plants/GrowingPlant.java" charset="windows-1252" />
+    <file url="file://$PROJECT_DIR$/src/haven/res/lib/plants/TrellisPlant.java" charset="windows-1252" />
+  </component>
 </project>
